maybe this will fix mobile text cut off issue

--- a/styles/sass/partials/_global.scss
+++ b/styles/sass/partials/_global.scss
@@ -116,10 +116,10 @@ img {
     overflow: auto;
     max-height: 70%;
     width: 100%;
-    margin-left: 10%;
+    // margin-left: 10%;
     margin-top: auto;
     margin-bottom: 25%;
-    padding-right: 17vw;
+    padding-right: 30px;
     scrollbar-width: none;
 
     a {
